--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Lesson1</string>
+    <string name="app_name">Cписок Контактов</string>
+    <string name="name">Alex</string>
+    <string name="phone">88005553535</string>
+    <string name="email">sancshous@gmail.com</string>
+    <string name="notes">Заметки</string>
 </resources>
